changed likes to horizontal views above new matches, added moments fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="new_likes">New likes</string>
     <string name="s_t_u_r_r_d">S t u r r d</string>
     <string name="new_matches">New Matches</string>
-    <string name="explore_sturrd">Explore Sturrd</string>
+    <string name="explore_sturrd">Explore Sturrd in your area</string>
     <string name="messages">Messages</string>
     <string name="match_s_name">Match\'s Name</string>
     <string name="user_s_name">User\'s Name</string>
